; ModuleID = '/home/carl/AnghaBench/linux/net/xfrm/extr_xfrm_state.c_xfrm_state_register_afinfo.c'
source_filename = "/home/carl/AnghaBench/linux/net/xfrm/extr_xfrm_state.c_xfrm_state_register_afinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_state_afinfo = type { i64 }

@NPROTO = common dso_local global i64 0, align 8
@EAFNOSUPPORT = common dso_local global i32 0, align 4
@xfrm_state_afinfo_lock = common dso_local global i32 0, align 4
@xfrm_state_afinfo = common dso_local global i32** null, align 8
@EEXIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xfrm_state_register_afinfo(%struct.xfrm_state_afinfo* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xfrm_state_afinfo*, align 8
  %4 = alloca i32, align 4
  store %struct.xfrm_state_afinfo* %0, %struct.xfrm_state_afinfo** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.xfrm_state_afinfo*, %struct.xfrm_state_afinfo** %3, align 8
  %6 = getelementptr inbounds %struct.xfrm_state_afinfo, %struct.xfrm_state_afinfo* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @NPROTO, align 8
  %9 = icmp uge i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i64 @WARN_ON(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32, i32* @EAFNOSUPPORT, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %2, align 4
  br label %43

16:                                               ; preds = %1
  %17 = call i32 @spin_lock_bh(i32* @xfrm_state_afinfo_lock)
  %18 = load i32**, i32*** @xfrm_state_afinfo, align 8
  %19 = load %struct.xfrm_state_afinfo*, %struct.xfrm_state_afinfo** %3, align 8
  %20 = getelementptr inbounds %struct.xfrm_state_afinfo, %struct.xfrm_state_afinfo* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = getelementptr inbounds i32*, i32** %18, i64 %21
  %23 = load i32*, i32** %22, align 8
  %24 = icmp ne i32* %23, null
  %25 = zext i1 %24 to i32
  %26 = call i64 @unlikely(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %16
  %29 = load i32, i32* @EEXIST, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %4, align 4
  br label %40

31:                                               ; preds = %16
  %32 = load i32**, i32*** @xfrm_state_afinfo, align 8
  %33 = load %struct.xfrm_state_afinfo*, %struct.xfrm_state_afinfo** %3, align 8
  %34 = getelementptr inbounds %struct.xfrm_state_afinfo, %struct.xfrm_state_afinfo* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = getelementptr inbounds i32*, i32** %32, i64 %35
  %37 = load i32*, i32** %36, align 8
  %38 = load %struct.xfrm_state_afinfo*, %struct.xfrm_state_afinfo** %3, align 8
  %39 = call i32 @rcu_assign_pointer(i32* %37, %struct.xfrm_state_afinfo* %38)
  br label %40

40:                                               ; preds = %31, %28
  %41 = call i32 @spin_unlock_bh(i32* @xfrm_state_afinfo_lock)
  %42 = load i32, i32* %4, align 4
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %40, %13
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i64 @WARN_ON(i32) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @rcu_assign_pointer(i32*, %struct.xfrm_state_afinfo*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
